--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>react管理系统测试</title>
+  <script src="./resource/js/flexible.js"></script>
 </head>
 <body>
   <div id="App"></div>
